--- a/bliss/config/plugins/ct2.html
+++ b/bliss/config/plugins/ct2.html
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="btn-group btn-group" role="group" aria-label="global functionality">
     <a class="btn btn-default disabled-btn" href="javascript:void(0)">
-      {{ config['filename'] if config['filename'] else "unknown file" }}
+      {{ config['name'] }}
     </a>
     <button id="apply" type="button" class="btn btn-primary"
 	    data-toggle="tooltip" title="save changes">
@@ -22,12 +22,11 @@
     </button>
   </div>
 </div>
-</div>
 <div style="height:10px;"></div>
 <form id="device_form" class="form-horizontal">
   <fieldset>
     <div class="form-group">
-      <label class="col-md-4 control-label" for="device-name"
+      <label class="col-md-1 control-label" for="device-name"
   	     data-toggle="tooltip" title="card name">
 	Name
       </label>
@@ -39,7 +38,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-md-4 control-label" for="device-name"
+      <label class="col-md-1 control-label" for="device-name"
   	     data-toggle="tooltip" title="type of card">
 	Type
       </label>
@@ -52,7 +51,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-md-4 control-label" for="device-address"
+      <label class="col-md-1 control-label" for="device-address"
   	     data-toggle="tooltip" title="device address">
 	Address
       </label>
@@ -64,7 +63,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-md-4 control-label" for="device-clock"
+      <label class="col-md-1 control-label" for="device-clock"
   	     data-toggle="tooltip" title="internal clock speed">
 	Clock
       </label>
@@ -105,7 +104,7 @@
 		     name="ch-{{ch_id}}-counter-name"
 	             class="form-control input-sm" type="text"
 	             value="{{ ch['counter name'] }}"
-		     style="border-radius: 0px;" />
+		    />
 	    </td>
 	    <td>
 
@@ -139,8 +138,10 @@
 	  {% endfor %}
 	</tbody>
       </table>
+    </div>
   </fieldset>
 </form>
+</div>
 
 <script type="text/javascript">
 
@@ -179,7 +180,7 @@
     });
 
     $("#revert").on("click", function() {
-      show_item("{{ config["name"] }}");
+      show_item("{{ config['name'] }}");
       return false;
     });
 
