beacon web: show error notification on error 500

--- a/bliss/config/conductor/web/configuration/editor.html
+++ b/bliss/config/conductor/web/configuration/editor.html
@@ -77,7 +77,10 @@
     $(".revert-editor").on("click", function() {
       $.get("db_file/{{ name }}", function(data) {
         editor.setValue(data.content);
-      }, "json");
+      }, "json")
+      .fail(function() {
+        show_notification("Error", "error");
+      });
     });
   });
 </script>
