--- a/bliss/config/plugins/beamline.html
+++ b/bliss/config/plugins/beamline.html
@@ -12,6 +12,12 @@
       <span class="fa fa-save"></span>
       Save
     </button>
+    <button id="apply" class="btn btn-info"
+      data-filename="{{filename}}"
+      data-toggle="tooltip" title="view in yaml file">
+      <span class="fa fa-eye"></span>
+      Yaml
+    </button>
   </div>
 </div>
 
