--- a/bliss/config/plugins/emotion_axis.html
+++ b/bliss/config/plugins/emotion_axis.html
@@ -1,20 +1,25 @@
 
 {% block toolbar %}
-<div class="btn-toolbar" role="toolbar" id="main_toolbar" aria-label="main toolbar">
+<div class="btn-toolbar mb-3" role="toolbar" id="main_toolbar" aria-label="main toolbar">
   <button id="emotion_axis_apply" class="btn btn-primary">
     <span class="fa fa-save"></span>
     Apply
- </button>
-
-{% if __tango_server__ %}
-
+  </button>
+  
+  {% if __tango_server__ %}
+  
   <button id="emotion_axis_apply_server" class="btn btn-primary">
     <span class="fa fa-save"></span>
     Apply & Update TANGO server
   </button>
 
-{% endif %}
-
+  {% endif %}
+  
+  <button class="btn btn-info"
+    data-name="{{name}}" data-filename="{{filename}}">
+    <span class="fa fa-eye"></span>
+    Yaml
+  </button>
 </div>
 
 {% endblock %}
