web config ui: improve tree error msg + no tag text

--- a/bliss/config/plugins/session.html
+++ b/bliss/config/plugins/session.html
@@ -231,7 +231,7 @@
     $.each(items, function(name, item) {
       var tags = item.tags;
       if (tags == null || tags.length == 0) {
-        tags = ["__no_tag__"];
+        tags = ["(no tag)"];
       }
       $.each(tags, function(idx, tag) {
         var nodes = null;
