--- a/bliss/config/conductor/web/homepage/index.html
+++ b/bliss/config/conductor/web/homepage/index.html
@@ -41,6 +41,12 @@
             <a class="nav-link" href="https://bliss.gitlab-pages.esrf.fr/bliss/master" title="Bliss documentation">Documentation</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="https://gitlab.esrf.fr/bliss/bliss/-/issues/new?issue" title="Feedback">Feedback</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mailto:bliss@esrf.fr" title="ISDD/BCU Contact">Contact</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://gitlab.esrf.fr/bliss/bliss" title="Go to bliss repository">
   
               <svg viewBox="0 0 24 24" width="24" height="24">
