--- a/bliss/config/conductor/web/configuration/index.html
+++ b/bliss/config/conductor/web/configuration/index.html
@@ -592,8 +592,8 @@
         }
       });
 
-      $("#filter-edit").keyup(function () {
-        // enter key
+      $("#filter-edit").keyup(function (event) {
+        // enter key: do nothing
         if (event.keyCode == 13) return
         // escape key: clear search
         if (event.keyCode == 27) $(this).val('')
@@ -618,7 +618,7 @@
       });
 
       $("#filter-edit").keydown(function (e) {
-        if (event.keyCode == 13) {
+        if (e.keyCode == 13) {
           // Enter key pressed: do not submit the form
           e.preventDefault()
           if (search_count == 0) return false
